# web_automator

./: .gitignore  Cargo.toml  Makefile  README.md
src/: config.rs  cookie_manager.rs  instruction_handler.rs  lib.rs  link_parser.rs  main.rs  models.rs  timing_utils.rs
